rolling back changes: trying to fix the overscrolling into a blank white space on mobile

--- a/src/UI/styles/index.scss
+++ b/src/UI/styles/index.scss
@@ -25,8 +25,6 @@ html {
     // Prevents iOS from zooming/changing text size on orientation change
     -webkit-text-size-adjust: 100%;
     text-size-adjust: 100%;
-    max-height: 100dvh;
-    overflow: hidden;
 }
 
 :root {
